# asherah

./: .codecov.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .tartufo-excludes  .tool-versions  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  codecov.yml  junit_results.xml  pr1351_comments.txt  pr1351_summary.txt  project-dirs  tartufo.toml
rust/appencryption/: .clippy.toml  CHANGELOG.md  Cargo.toml  README.md  pr1351_comments.txt
rust/appencryption/.github/workflows/: rust-appencryption-bench.yml  rust-ci.yml
rust/appencryption/benches/: encryption.rs  key_management.rs  kv_adapter_performance.rs
rust/appencryption/docs/: MIGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  SQL_METASTORE.md  SQL_SERVER_IMPLEMENTATION.md  SQL_SERVER_METASTORE.md  TEST_STATUS.md  TODO-VNEXT.md
rust/appencryption/examples/: README.md  actix_web_integration.rs  ado_example.rs  advanced_caching.rs  advanced_session_factory.rs  aws_kms_with_failover.rs  aws_v1_integration.rs  axum_integration.rs  custom_metastore.rs  dynamodb_global.rs  metrics_integration.rs  mysql_example.rs  performance_tuning.rs  postgres_example.rs  redis_kv_metastore.rs  simple_example.rs  slru_cache_example.rs  sql_metastore_integration.rs  sqlserver_example.rs
rust/appencryption/examples/cli/: Cargo.toml  README.md  build.sh  main.rs
rust/appencryption/scripts/: build.sh  integration_test.sh  lint.sh  release_prod.sh
rust/appencryption/sql/: sqlserver_schema.sql
rust/appencryption/src/: cache_test.rs  error.rs  lib.rs  log.rs  metrics.rs  partition.rs  partition_test.rs  policy.rs  session.rs  session_cache.rs
rust/appencryption/src/cache/: lfu.rs  lru.rs  mod.rs  simple.rs  slru.rs  test_slru.rs  tlfu.rs
rust/appencryption/src/crypto/: aead.rs  aes256gcm.rs  mod.rs
rust/appencryption/src/envelope/: encryption.rs  mod.rs
rust/appencryption/src/key/: cache.rs  mod.rs
rust/appencryption/src/kms/: aws.rs  aws_builder.rs  mod.rs  static_kms.rs
rust/appencryption/src/metastore/: README.md  ado.rs  dynamodb.rs  dynamodb_impl.rs  dynamodb_impl_test.rs  kv_adapter.rs  kv_adapter_test.rs  kv_store.rs  memory.rs  (+9 more)
rust/appencryption/tests/: README.md  dynamodb_metastore_test.rs  integration_tests.rs  kv_send_test.rs
rust/memcall/: Cargo.toml
rust/memcall/src/: aix.rs  error.rs  freebsd.rs  lib.rs  netbsd.rs  openbsd.rs  solaris.rs  types.rs  unix.rs  windows.rs
rust/memcall/tests/: memcall_tests.rs
rust/memguard/: CHANGELOG.md  CHANGES.md  Cargo.toml  abort_handler.c  abort_wrapper  debug_sigabrt.lldb  fix_all_typed_tests.sh  run_tests.sh  run_with_abort_capture.sh  test_binary.txt  test_deadlock.rs  test_purge_simple.rs  verify_go_hash.go
rust/memguard/benches/: stream_bench.rs
rust/memguard/docs/: LOCK_ORDERING.md
rust/memguard/examples/: signal_test.rs
rust/memguard/src/: buffer.rs  coffer.rs  enclave.rs  error.rs  globals.rs  lib.rs  registry.rs  signals.rs  stream.rs  stream.rs.bak  test_abort_intercept.rs  test_abort_issue.rs  test_abort_minimal.rs  test_debug.rs  test_debug10.rs  test_debug2.rs  test_debug3.rs  test_debug4.rs  test_debug5.rs  test_debug6.rs  test_debug7.rs  test_debug8.rs  test_debug9.rs  test_debug_hash.rs  test_debug_hash2.rs  test_empty_buffer.rs  test_init.rs  test_minimal.rs  test_minimal2.rs  test_single_thread.rs  test_verify_go_hash.rs  util.rs
rust/memguard/tests/: concurrent_tests.rs  lifecycle_tests.rs  memguard_tests.rs  signals_integration_test.rs  test_helper.rs  test_purge_minimal.rs
rust/securememory/: CHANGELOG.md  Cargo.toml  Cargo.toml.new  FEATURE_MATRIX.md  FINAL_PERFORMANCE_REPORT.md  GO_RUST_COMPARISON.md  IMPROVEMENT_PLAN.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_REGRESSION_ANALYSIS.md  PLATFORM_SUPPORT.md  README.md  STATUS.md  test_close_behaviour.rs
rust/securememory/benches/: detailed_parity_bench.rs  final_benchmark.rs  final_comparison.rs  go_comparison.rs  performance_test.rs  rust_vs_go_parity.rs  secret_benchmark.rs  simple_parity_bench.rs
rust/securememory/docs/: IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_COMBINED.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_REGRESSION_ROOT_CAUSE.md  PLATFORM_SUPPORT_SUMMARY.md  PROTECTED_MEMORY_DESIGN.md  README-memguard.md  README-signal.md  README-stream.md
rust/securememory/examples/: advanced_stream.rs  create_secret_stream.rs.disabled  direct_secret.rs.disabled  memguard_debug.rs.disabled  memguard_example.rs.disabled  memguard_minimal.rs.disabled  minimal.rs  no_signal_secret.rs  pmsecret_minimal.rs.disabled  protected_memory_secret.rs.disabled  protected_memory_test.rs  raw_memory.rs.disabled  secret_test.rs  signal_handling.rs.disabled  simple_secret.rs  simplified_secret.rs.disabled  stream.rs.disabled
rust/securememory/scripts/: benchmark_test.sh  test.sh
rust/securememory/src/: error.rs  lib.rs  lib.rs.new  secret.rs  signal.rs  signal.rs.new  stream.rs  stream.rs.new  test_minimal.rs  test_utils.rs
rust/securememory/tests/: README.md  all_api_test.rs  alloc_test.rs.disabled  buffer_minimal_test.rs  buffer_test.rs  close_deadlock_test.rs  custom_buffer_test.rs  debug_concurrent_test.rs  debug_race_test.rs  debug_secret_test.rs  debug_sigbus_test.rs  debug_simple_test.rs  enclave_minimal_test.rs  enclave_safe_test.rs  enclave_test.rs  enclave_test_minimal.rs  enclave_test_simple.rs  high_concurrency_test.rs  lib_tests.rs  memguard_test.rs  minimal_enclave_test.rs  minimal_memory_test.rs.disabled  minimal_race_test.rs  minimal_secret_test.rs  minimal_test.rs.disabled  platform_specific_test.rs.disabled  protected_memory_minimal_test.rs.disabled  protected_memory_test.rs  secret_race_test.rs  secret_regression_test.rs  secret_test.rs  sigbus_aligned_test.rs  sigbus_analysis_test.rs  sigbus_debug_detailed_test.rs  sigbus_debug_test.rs  sigbus_exact_pattern_test.rs  sigbus_minimal_test.rs  sigbus_progressive_test.rs  sigbus_race_exact_test.rs  sigbus_real_close_test.rs  (+13 more)
samples/rust/referenceapp/: Cargo.toml  README.md
tests/cross-language/rust/: Cargo.toml  README.md
(+1504 files in other folders)
