[package]
name = "appencryption"
version = "0.1.0"
edition = "2021"
description = "Application-level envelope encryption library"
license = "Apache-2.0"
repository = "https://github.com/godaddy/asherah"

[dependencies]
securememory = { path = "../securememory" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
metrics = "0.21"
zeroize = "1.6"
subtle = "2.5"
lru = "0.11"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
regex = "1.8"
base64 = "0.21"
futures = "0.3"

# AWS SDK dependencies (v2)
aws-config = { version = "0.55", optional = true }
aws-sdk-dynamodb = { version = "0.28", optional = true, features = ["rt-tokio"] }
aws-sdk-kms = { version = "0.28", optional = true, features = ["rt-tokio"] }
aws-sdk-sts = { version = "0.28", optional = true, features = ["rt-tokio"] }
aws-types = { version = "0.55", optional = true }

# AWS SDK dependencies (v1 - rusoto)
rusoto_core = { version = "0.48", optional = true }
rusoto_kms = { version = "0.48", optional = true }
rusoto_dynamodb = { version = "0.48", optional = true }
maplit = { version = "1.0", optional = true }

# SQL dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "json"], optional = true }

[features]
default = ["aws-v2"]
# AWS SDK versions
aws-v1 = ["rusoto_core", "maplit"]
aws-v2 = ["aws-config"]
# AWS services
aws-kms = []
aws-dynamodb = []
# Combined features
aws-v2-kms = ["aws-v2", "aws-kms", "aws-sdk-kms", "aws-sdk-sts", "aws-types"]
aws-v2-dynamodb = ["aws-v2", "aws-dynamodb", "aws-sdk-dynamodb", "aws-sdk-sts", "aws-types"]
aws-v1-kms = ["aws-v1", "aws-kms", "rusoto_kms"]
aws-v1-dynamodb = ["aws-v1", "aws-dynamodb", "rusoto_dynamodb"]
# All AWS features
aws-all = ["aws-v2-kms", "aws-v2-dynamodb", "aws-v1-kms", "aws-v1-dynamodb"]
# SQL features
sql = ["sqlx"]
mysql = ["sql", "sqlx/mysql"]
postgres = ["sql", "sqlx/postgres"]
oracle = []
ado = []

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.14"
humantime = "2.1"
# Enable SQL features for integration tests
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "json"] }
# AWS SDK for integration tests
aws-sdk-dynamodb = "0.28"
aws-sdk-kms = "0.28"
hex = "0.4"
# Dependencies for examples
actix-web = "4.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
getrandom = "0.2"
metrics-exporter-prometheus = "0.13"