[package]
name = "cltf"
version = "0.1.0"
edition = "2021"
description = "Cross-language testing framework for Asherah Rust"
repository = "https://github.com/godaddy/asherah"
license = "MIT"

[dependencies]
asherah-appencryption = { path = "../../../rust/appencryption" }
asherah-securememory = { path = "../../../rust/securememory" }
cucumber = "0.20"
base64 = "0.21"
futures = "0.3"
mysql = "24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[test]]
name = "encrypt"
path = "tests/encrypt.rs"
harness = false

[[test]]
name = "decrypt"
path = "tests/decrypt.rs"
harness = false