[package]
name = "asherah-traces"
version = "0.1.0"
edition = "2021"
description = "Benchmarking and visualization tools for Asherah AppEncryption"
repository = "https://github.com/godaddy/asherah"
license = "MIT"
readme = "README.md"

[dependencies]
byteorder = "1.4"
rand = "0.8"
rand_distr = "0.4"
tokio = { version = "1.28", features = ["full"] }
flate2 = "1.0"
bzip2 = "0.4"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
test-traces = []