[package]
name = "asherah-lambda"
version = "0.1.0"
edition = "2021"
description = "AWS Lambda example application for Asherah"
repository = "https://github.com/godaddy/asherah"
license = "MIT"
keywords = ["encryption", "security", "cryptography", "aws", "lambda"]

[dependencies]
appencryption = { path = "../../../../rust/appencryption" }
securememory = { path = "../../../../rust/securememory" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
lambda_runtime = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = "0.55"
aws-sdk-dynamodb = "0.28"
aws-sdk-kms = "0.28"
aws-smithy-client = { version = "0.55", features = ["test-util"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
time = "0.3"
regex = "1.9"
once_cell = "1.18"
libc = "0.2"
procfs = "0.15"